--- a/css/style.css
+++ b/css/style.css
@@ -1,19 +1,20 @@
 
-
+/*
 * {
     border: 1px solid red !important;
-}
+} */
 
 hr {
-height: 3px;
-background-color: #D7D7D7;
+	height: 3px;
+	background-color: #D7D7D7;
 }
 
 body {
-font-family: 'Lato', sans-serif;
-font-weight: 300;
-color: #747704;
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
+	color: #747704;
 }
+
 .text-muted {
 	color: #BCBBBB ;
 }
@@ -26,7 +27,17 @@ color: #747704;
 	font-size: 60px;
 }
 
+.title-medium {
+	padding-left: 20px;
+}
+
 .title-logo{
 	margin-top: 20px;
+	border: 7px solid #F8981C ;
+}
+
+.image-link {
+	color: #BCBBBB ;
+	font-size: 15px;
 }
 
